--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.AluraViagens"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.ResumoCompraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.PagamentoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.ResumoPacoteActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.ListaPacotesActivity"
             android:exported="true">
             <intent-filter>
